Brought back to a working state

--- a/Gravity Simulator 2D/Gravity Simulator 2D.csproj
+++ b/Gravity Simulator 2D/Gravity Simulator 2D.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
@@ -10,7 +10,15 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
     <RootNamespace>GravitySimulator2D</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup>
+    <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Deterministic>false</Deterministic>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <StartupObject>GravitySimulator2D.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="InputHandlerOld.cs" />
     <Compile Remove="OrbitVisualizer.cs" />
     <Compile Remove="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -26,6 +34,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="InputHandlerOld.cs" />
     <None Include="OrbitVisualizer.cs" />
     <None Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -33,7 +42,7 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
 </Project>
